# ChangeLog for sci-biology/artemis
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  18 Feb 2015; Justin Lecher <jlec@gentoo.org> artemis-9999.ebuild:
  sci-biology/artemis: fix SLOT operators

  23 Mar 2014; Martin Mokrejs <mmokrejs@fold.natur.cuni.cz> artemis-9999.ebuild:
  sci-biology/artemis: documented dependences

  23 Mar 2014; Martin Mokrejs <mmokrejs@fold.natur.cuni.cz> artemis-9999.ebuild:
  sci-biology/artemis: fixed JVM dependency, added a link to INSTALL docs

  06 Jan 2014; Justin Lecher <jlec@gentoo.org> artemis-9999.ebuild,
  metadata.xml:
  Switch from git-2 to git-r3

  07 Feb 2012; Martin Mokrejs <mmokrejs@fold.natur.cuni.cz> artemis-9999.ebuild:
  sci-biology/artemis: adjust ebuild based on upstream providing a Makefile

  07 Feb 2012; Martin Mokrejs <mmokrejs@fold.natur.cuni.cz>
  artemis-9999.ebuild:
  adjust ebuild based on upstream providing a Makefile

*artemis-9999 (08 Jan 2012)

  08 Jan 2012; Martin Mokrejs <mmokrejs@fold.natur.cuni.cz>
  +artemis-9999.ebuild, +metadata.xml:
  initial, not yet working ebuild