@@ -1,0 +1,1 @@
+DIST artemis.pdf 1149449 SHA256 ab573b4ea7b895cb7d2a97e4d42a71938f1feda44e2da22fe5b079583ad87ba6 SHA512 1c3056dab7239c3a68b2e76491d77612f22ac8f83eaf32e0ab0a3901e03d3c65d5ac02f5758d2d7728d94dd44c29517a498fa94a947d5d319ded43ddec4ba5fb WHIRLPOOL a75266ae72075ea7547560a9046c1e0f813956b94a5c3d9af3cd08a579ed60af842c6ece94e6b1dfa5db1820094069edb7d88b4ee6256410ebced4310739d79f
