@@ -2,6 +2,11 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  09 Jun 2015; Martin Mokrejs <mmokrejs@fold.natur.cuni.cz> artemis-9999.ebuild:
+  sci-biology/artemis: ebuild cleanup; officially there is not install and one
+  needs to keep the structure of the source tree and execute directly from
+  there; therefore the ebuild does not work yet
+
   18 Feb 2015; Justin Lecher <jlec@gentoo.org> artemis-9999.ebuild:
   sci-biology/artemis: fix SLOT operators
 
